# scrapers

./: .gitignore  Readme.md  main.py  model.py  page.py  pyproject.toml  selector.py  session.py
core/: elements.py  page.py  session.py
test_1/: Readme.md  main.py
test_1/core/: element.py  model.py  page.py
test_2/: Readme.md  main.py
test_2/core/: page.py  session.py
