[project]
name = "dataforest-tt"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (==1.50.0)",
    "word2number (==1.1)",
    "pandas (==2.2.3)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "greenlet (==3.1.1)",
    "idna (==3.10)",
    "lxml (==5.3.1)",
    "multidict (==6.1.0)",
    "numpy (==2.2.3)",
    "propcache (==0.2.1)",
    "pyee (==12.1.1)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.1)",
    "requests (==2.32.3)",
    "six (==1.17.0)",
    "soupsieve (==2.6)",
    "sqlalchemy (==2.0.38)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2025.1)",
    "urllib3 (==2.3.0)",
    "yarl (==1.18.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
